--- a/components/inputs/input.html
+++ b/components/inputs/input.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../assets/css/global.css" />
 <link rel="stylesheet" href="input.css" />
 <section>
-  <input type="text" placeholder="Hello" />
+  <input class="email-input" type="text" placeholder="Hello @example.com" />
 </section>
