--- a/components/inputs/input.html
+++ b/components/inputs/input.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="../assets/css/global.css" />
 <link rel="stylesheet" href="input.css" />
-<section>
-  <input class="email-input" type="text" placeholder="Hello @example.com" />
-</section>
+<div class="form-group">
+  <label for="email">Email Address*</label>
+  <div class="input-wrapper">
+    <span class="input-icon">✉</span>
+    <input type="email" id="email" placeholder="hello@example.com" />
+  </div>
+</div>
